@@ -5,30 +5,30 @@ AUX sip-4.15.5-darwin.patch 1168 SHA256 6c96b4528ecb2cf596d0eb477167d5314dff65f5
 AUX sip-4.9.3-darwin.patch 1447 SHA256 91751308ce118af4f7f7cb3ac3e25de29c527ddc0bb52102e6e835c8c0e64ea2 SHA512 a0b2c4deb30b547473d8e2b095b57d32c8a82c12e5670b330fbfce1faddab87960a0c71b150fd7c51a5ce6486eb54b40fd6fa15d76b031599b988fc88179486b WHIRLPOOL 88cc2a34b1616dcb5377879cc9e50d9dc16b7ed505ac88c14aadbb3ce9d824fdf196231fcbdcc5c63cfe7c8c531bf70799e7cf56d0b20db2c3a433668596f9fb
 DIST sip-4.15.3.tar.gz 773818 SHA256 46f245252866dbdb7fb5aca194bda991cc84ba8090d5e864765ee7e511a053d4 SHA512 495522aa2a553099c02ab4f7ce7485d24267e5093398f5f20e7102542153084486b6e654564ee716634a257301dd094a08754cdc40282cd2e4496e52619bc138 WHIRLPOOL 3192e9f15420409905faaa155939829b24da8bd5e1467ca908857ba293416e114d31f4374bb54659f285ed693cd51074c249221e0063b4d916326e7724e8e9f0
 DIST sip-4.16.2.tar.gz 793663 SHA256 a55a2324a46ab42e42ae57c52ef06583b17d25c987973fe2e7ff2e8a649294ce SHA512 07ced0188bd4dc897ddacbce226b33ac9d236455a95018e900fd5f652439c905ddd56688f8bb29f704fcf201a8e668d5cc89ba887065826653087cf0a9f6dbfb WHIRLPOOL 47c741f1b787ba147e7a299e3c93a7537f14f1b192726e39f3679d0b0e0a991df603509c5674f262311259d9ad2e1e845746d215d5ef70eb7b827c1557eb8b82
-DIST sip-4.16.5.tar.gz 859672 SHA256 a00ba34c30bedc0f61916eb10bd12867b4754910a766647e3e58f88bd00f1e87 SHA512 730578deb289ee94dab4d333e331de8ef68319758e4351e37605a43932c1e4db28de727a76f7a9e9ef610b7287f4eea155765a16dbdb61ac220c371d739a6f99 WHIRLPOOL 009b6a3d93d2b934998ae74209cf9667fd7f9db39b400328f6f577d3b910fd9e568d038402bf837bdfb2c0f4c5258f79da0636146521c846cd565989671369f5
 DIST sip-4.16.6.tar.gz 861708 SHA256 8c7db2baf52935ee7d8573c98d6ede0d90e4308b8b9e7739e59acf1650714552 SHA512 18646c5ccefe45a01e6bb649acc062781da03942e1c12f79f3e1ee01cec81e834ead36321ec073e75d42328071171111ba3e4a067e1f67d576f443a96854d51a WHIRLPOOL f15225f95fa682a23d3cacc71049ca51692cc194318d4aea38ed87fffbbcfb2e856b73ecc79907b09818ca1469ab19decc3a5865890b7ed3de83f5c536451954
+DIST sip-4.16.7.tar.gz 954799 SHA256 4caa8d52e4403bae5c4c64f44de03a2cfd0bb10b6d96c5fb771133516df9abbd SHA512 0e15b837c3f109f8665f057218c81ed4cb3d7c1eb9be78e454d54020cd748e5d1034d04345897f5f63a38c4ec33c39b9500486167a507895597d4e3c1623be56 WHIRLPOOL 3671344235e7fcb032936e3bf509170d2728b04b17402db484c5d73500378a161a6ecce8e592d38381ccd1d6a8daa01e098cb6680dd2546b0b34984e77032b3a
 EBUILD sip-4.15.3.ebuild 2969 SHA256 264822abb8d69e245bc503b65debcb19ab807a37f5d7aa75753afc02bc1a494d SHA512 27f7f5824d85f189b5df7f18f27d3a6a011ef80a03f230321c1a047276b8ff9e6de96716519c9f063c927cd7dbbe0b2f5b1d472ce071a39ac3f91bea7fbc289c WHIRLPOOL 75629461774b51e852bb2471f1fe11e5c3a432420ab8411cd05d086d1af569a70c83745cb5c7cdab73a89cac177f30d76fa8f9f7f2579d2b35d938e70fa0bbac
 EBUILD sip-4.16.2.ebuild 2960 SHA256 a831dfd3e2ed6b8c47d7f058edc69b36a2a71967aa2326bf7ac4492a8214b520 SHA512 8f46765731fe3779921b60b417d09c850f5b1408b8e83f2ccfeca87a5cf46aa5a2e3104370d5bb53067fb654f70319da445f6599c80c2005982a9c930b4cb509 WHIRLPOOL 5c778c6be205293777346a544da870ab8f01258095b3f80286b427be854a7b1eed66c47e6ba27281a030641a918c2ca18a76e638f2a4858ce9e70d40d2ef578e
-EBUILD sip-4.16.5.ebuild 2891 SHA256 df33cb5dacde2c35fafa6a9617b404c3f254e0fdc78d248ed74097b16291d3f2 SHA512 7140fb6dcb16203271cd528fa798ce2752908aaa4778c76b2312da5f0cbfc6a5fb4308f5f5431c41ccbcf7b4b5a4eeb8b38d4d75f2fe52775cd8588e7c32023a WHIRLPOOL e43ba3d4e6b79d8b6d2d014cb13c3e0809a33c00d252aa476e7fe71a366127a7be9ad344f9c9bfb2ecd3501c2d1310022715c0c8a41273288129df5c68d7fc9f
 EBUILD sip-4.16.6.ebuild 2891 SHA256 2c997dde0b997f0cf82e8cc1ea3bc50424ba7121b2d96758abd8195b723d9e65 SHA512 55e66bfa84be33d121dbd3af59da904a409d1d8fd1713709d6e11114def13c50b2d4fafacf0f6a22ea53b5573d092519f1f78360337ce27df981b377385dfb21 WHIRLPOOL 624e1673ec1c9a4710b73101857bf1066cce4991e8eb421a8d6dd6b84fd41709bd0e712259eb5251806e5fa533541be34a5536678deccb8bfd417543db229dc2
-MISC ChangeLog 36191 SHA256 b24592310591bcaae707f4808880e3579a34595eec26115285738f8bde339fef SHA512 4b488b730c0a860e5ccf262adc452652deb3e61ffba30970bfa323415d6bf9aed982f825de630a5e7a148e1c215d04731b3e998b73f6ecf2c4305b2b1314d827 WHIRLPOOL c9d3b9980508ce2627b4b5fa5c3c52c62e9434a41bf657d4c9017f6bab8e1acec182e9a0227ada42c6230c59389566510d47e233a059d06411b14b28727aac01
+EBUILD sip-4.16.7.ebuild 2891 SHA256 585e657b29945eaeda7e5b915eaeb362eab9f070008aefab29657e0ae4492a99 SHA512 8f2a56a94547b9f9ddfd681ba23ca5ecf6238d69247fdde419652f60231d1e8c2e71221404453d8d8d82ab8e40995ab05454b6a8852ed31da206f44313b98778 WHIRLPOOL 7b64ba872def1773b744c83387c5dc01c29f65616e543ecf7ca0993eb0848ef128cfcc9322f3c77ca93dd7f278eaac18a98a6936e2e0cb33040b89f815a84078
+MISC ChangeLog 36339 SHA256 e04442ac26295a7c7474df63862dac078da4184cb49e619f1d909f0995125c83 SHA512 be39dbead3cb15a984675e48f5b003c733f865ad2c5d81597a884401097bff226c1478f99927b17622366ab8828b50dd03a8e28aad1a339d29e39f5b79e624d0 WHIRLPOOL d80f13c9fda9e5ff2219db26a8512e9d5aa89167f6764b07d54178e956c1549210f4eb3c4a2d9f080980bdb82eb7cf21dfdb12a063b7c7915856de49aec6a823
 MISC metadata.xml 401 SHA256 ab74aa63d207487582e8099627d0c8a809eda3c75ef92396c0287aa272cc11db SHA512 b0b78127d63daa784c5d1ef45b416621cd18930268dab57da4ec53da978bae7b2c17747d0906bd7f33537a0d0c0d9b671f29bb8743633f78645c582191ddd0b5 WHIRLPOOL 4500cbc74ff40340231ff96064d4bf56a1c7aa375352fff6e645b9afcec722a116f1a464ea6146f0becbbd207598ddfbb1c296aed24557bca7fd0d4baf7a1ed4
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0
 
-iQJ8BAEBCABmBQJU89W2XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+iQJ8BAEBCABmBQJVGGvjXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
 ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ4N0Y5QkIzRDgwM0JERkYzMTc5RTI1MjhE
-QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9QiQP/jr9Q7vw/vFCJ4o3Tx7LjJc2
-03yXNJCPcIC3rHzu/gvrCxSjFYvceabiDi1PPaJi2G579n/QbWhmxEeVRcYcyW9K
-Ht7IkiW8lbUZjiGGY3QNX6xziCwm6iaMTrTuxwiRlb2k/xUKLpJmrB9RnmITf/SI
-byDRhfu8veRQG8egtWdAUkkrsk4JgHB2BPoWwiEPgFBG94FkTcArdmtB29eCBL4i
-JSXCy4yAeJ8eqeHrK+4faf4riFZoSVp4TbIlRcLUlRKFWMFzObJGroOMg8Lva4T8
-w4YFNpnrgDEnmzGt/xu2JxSx6KyxcnYfnHIjoAPvnEsgiAYC0uED8Vq0cBxbF3DW
-Rte32xj6FQkzCm6n38tWmA40FPWxFfjVBbNoM3eeOUBdBf+iSlq7QQ1Oi1jhDTBH
-w+m7oueiY57aENVEorNpBXLR6ZNqtdOj+C3qRooeSaOyfh+uNu8whdIlYPEQO2t2
-rByBZ7vlWFNBuBYQDnkUCwOO8F5cnVsTh/siYWjGbEzcfBE7YvKxeoICXTnYaXik
-ZGFWGrs+H2FAYOl1II3cKh/qqu8hXC1PeKQfh21mVaFN7ioU/60VwuIVcPBf86qv
-kNoEqI7NOVVLACnLZvenCxQqZtoogjGg3CocTH+1/gi6xVuX9T4Dttjdn/jZpRjE
-5iYoQERm3mHnLW9ySpTJ
-=wsUU
+QURFRDZCMjY3MUNCNTdEAAoJENre1rJnHLV9+HsP+wfiwGyrrnHvKV8QZwWPNtlL
+evUH/OjW717El/AnKoWzM5tscRlB1al4Q9pW2ooOrySH6ywLy3F/1F35FDTasnSB
+zBHPGYrQv0qXxZ7cIAhuPEzrxZefT00qW7js6pejXImD9sq2jvhsDhkpOEX86mFx
+C9U+Ro+0uzkjB0ASXM12nVRVCDPUbyHpFG5ChzQH+MFDbCoH21E1dTMuKSXDaN0Q
+saGLqh8ZYzh1VgP7bQq/Cnh7+r+fDUZZESzfdL4CD+3UXOOSbrmn7gZuEN2+7nR0
+9KdVNwZH0w80PN46CB04rFwRbi/mp80CrSTE59517PuYrDzDbhlbQqUxlJMfnvPD
+/t6z92LkD1RZomYbc1B3Iqrd42Y1U9PB0Yk5N4OVDgteK5BEj+iqmxJ166ORx5Vu
+g+1fKN6E41jORYGfLfmGWDtUmqAgC1Qjbphtsng+0fXAjBpCe7J6/f6HcztOkvpB
+rBUNv7UV2Yrbx3Yd2Qst28rUDtPsz/zE4iXxPKC/KJnrZrHoZhZURKkbJtkQDbrV
+zNQ2s2OSu1D4SWXrS/lTnN0vpvJmk4sboyqEG68GcrErhJdQjrf7R0KuUWIp/x5B
+TZdfFsXl1DhBGGDxTHphkzeYgiyutwzTDDAMN7m15Uox+FCs2FYk5n/y+rQ8Uf20
+z3kzp7b5NlVdUisYNB18
+=GD1B
 -----END PGP SIGNATURE-----
