@@ -1,0 +1,9 @@
+DEFINED_PHASES=install
+DESCRIPTION=Manages ECJ symlinks
+EAPI=5
+HOMEPAGE=http://www.gentoo.org/
+KEYWORDS=~amd64 ~arm ~ia64 ~ppc ~ppc64 ~x86 ~x86-fbsd ~x86-freebsd ~amd64-linux ~x86-linux ~sparc-solaris ~x86-solaris
+LICENSE=GPL-2
+RDEPEND=>=app-admin/eselect-1.2.3 !app-admin/eselect-java
+SLOT=0
+_md5_=50bddf50eb62d11e614c1d161518417d
